...
  customer_balance: 'Customer Balance',
  demo_pay: 'Demo Pay',
  dummy_passthrough_card: 'Dummy Passthrough Card',
  gbp_credit_transfer: 'GBP Credit Transfer',
  google_pay: 'Google Pay',
  eps: 'EPS',
  fpx: 'FPX',
  giropay: 'Giropay',
  grabpay: 'GrabPay',
  ideal: 'iDEAL',
  id_bank_transfer: 'ID Bank Transfer',
  id_credit_transfer: 'ID Credit Transfer',
  jp_credit_transfer: 'JP Credit Transfer',
...
